--- a/css/styel.css
+++ b/css/styel.css
@@ -11,6 +11,8 @@ body {
   height: 100%;
   margin: 0 auto;
   padding: 0 2rem;
+  /* 넘치는 부분 일괄적으로 변경 */
+  overflow: hidden;
 }
 /* a태그의 기본 디폴트값을 재설정 해준다. */
 a {
@@ -35,6 +37,11 @@ a:active {
     max-width: 1200px;
   }
 }
+@media only screen and (max-width: 980px) {
+  .skill-container {
+    display: none;
+  }
+}
 /* header */
 header {
   width: 100%;
@@ -48,7 +55,6 @@ header {
 header .head-container {
   width: 100%;
   height: 100%;
-  border: 1px solid red;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -79,7 +85,7 @@ section {
   background-position: center 10%; /* backgroun 잘린 부분을 조정한다 */
   z-index: 1;
 }
-section .main-container {
+.main-container {
   width: 100%;
   height: 100%;
   background-color: rgb(47, 48, 89);
@@ -87,7 +93,7 @@ section .main-container {
   z-index: 2;
   margin-top: 62px;
 }
-section .title-container {
+.title-container {
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -103,4 +109,153 @@ section .title-container {
   color: #fff;
   margin-bottom: 0.8rem;
   line-height: 32px;
+}
+/* 2번째 섹션 이미지 */
+.skill-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem 0;
+}
+.skill-container .skill {
+  width: 25%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  border-radius: 9px;
+  padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.skill-container .skill:hover {
+  transition: 0.4s;
+}
+.skill-container .skill .skill-icon {
+  font-size: 2.5rem;
+  margin: 0 10px;
+}
+.skill-container .skill .skill-title {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  line-height: 18px;
+  margin: 10px 0px;
+}
+
+.skill-container .skill .skill-title .skill-name {
+  font-weight: bold;
+  color: #545e6f;
+  margin-bottom: 0.2rem;
+}
+
+.skill-container .skill .skill-title .skill-usage {
+  font-size: 0.9rem;
+  color: #545e6f;
+  margin-bottom: 0.2rem;
+}
+.skill-container .skill .python-style {
+  color: #2186c4;
+}
+.skill-container .skill .vue-style {
+  color: #2e7d32;
+}
+.skill-container .skill .ai-style {
+  color: #f7df1e;
+}
+.skill-container .skill .analysis-style {
+  color: #ff8066;
+}
+.roadmap-container {
+  width: 100%;
+  margin-top: 2rem;
+}
+.roadmap-title-contaner {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: none;
+}
+.roadmap-title {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: #545e6f;
+}
+
+.slide-next {
+  font-size: 32px;
+  cursor: pointer;
+  color: rgb(47, 48, 49);
+}
+.slide-prev {
+  font-size: 32px;
+  cursor: pointer;
+  color: #cfd8dc;
+}
+.arrow-container {
+  display: flex;
+}
+.class-list {
+  display: flex;
+  list-style: none; /* 기본 ul태그 스타일 제거 */
+  padding: 1rem 0;
+  margin: 0;
+  /* list-style:none 세트 : padding:0 , margin:0 */
+  overflow: hidden;
+}
+.class-card {
+  width: 240px;
+  /* height: 150px; */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 6px 11px;
+  border-radius: 8px;
+  margin: 0 10px;
+  background-color: #fff;
+}
+.class-img {
+  width: 240px;
+  height: 150px;
+  border-radius: 8px 8px 0 0;
+}
+
+.class-container {
+  width: 100%;
+  padding: 0.5rem 1rem 1rem 1rem;
+}
+.class-skill {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.class-type {
+  font-size: 0.9rem;
+  color: #949393;
+}
+.class-format {
+  font-size: 0.9rem;
+  color: #fff;
+  background-color: #0d47a1;
+  padding: 0.2rem;
+}
+.class-desc {
+  width: 100%;
+  margin-top: 1rem;
+}
+.class-title {
+  font-weight: bold;
+  color: #545e6f;
+  /* text 말줄임표 */
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* 4개가 셋트 이다 */
+  margin-bottom: 0.5rem;
+  line-height: 21px;
+}
+.class-detail {
+  font-size: 0.9rem;
+  color: #545e6f;
+  line-height: 18px;
 }
