--- a/css/styel.css
+++ b/css/styel.css
@@ -128,9 +128,10 @@ section {
   padding: 0.5rem 1rem;
   margin: 0 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: 0.4s;
 }
 .skill-container .skill:hover {
-  transition: 0.4s;
+  transform: translate(0, -5px);
 }
 .skill-container .skill .skill-icon {
   font-size: 2.5rem;
@@ -212,6 +213,12 @@ section {
   border-radius: 8px;
   margin: 0 10px;
   background-color: #fff;
+  transition: 0.4s;
+}
+
+.class-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 6px 11px;
+  transform: translate(0, -5px);
 }
 .class-img {
   width: 240px;
@@ -257,5 +264,30 @@ section {
 .class-detail {
   font-size: 0.9rem;
   color: #545e6f;
-  line-height: 18px;
+  line-height: 1.5rem;
+}
+li:hover {
+  cursor: pointer;
+}
+/* footer */
+footer {
+  border-top: 1px solid #e4e4e4;
+  background-color: #f8f0fa;
+  padding: 1rem 0;
+  margin: 1rem 0;
+  line-height: 1rem;
+  height: 130px;
+}
+.footer-message {
+  font-weight: bold;
+  margin: 0.3rem 0.5rem;
+  color: #545e6f;
+}
+.footer-contact {
+  margin: 1rem 0.5rem;
+  color: #545e6f;
+}
+.footer-copyright {
+  color: #545e6f;
+  margin: 0.2rem 0.5rem;
 }
